# IflyClassManage

./: 1.http  32bit_make.sh  64bit_make.sh  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.xml  iflytek_awaken_asr  iflytek_awaken_asr.cbp  wordlist.txt
include/: myhttp.h  myjson.h  timer.h
include/asr_record/: asr_record.h  play_audio.h  speech_recognizer.h
include/awaken/: awaken.h
include/iat/: iat.h
include/tts/: tts.h
res/asr/: call.bnf
res/asr/GrmBuilld/: call.g  call_16K  chwiacaa.d  cpwxgwba.d  eiqzgwba.d  imttfpda.d  yvcvctea.d
res/asr/GrmBuilld/temp/: bhbmplea.d  call.g  call_16K  cysyggea.d  dwtgfcaa.d  hsizwlaa.d  phhbydaa.d  ttwbssba.d  uyxapxda.d  zfudaaaa.d
res/ivw/: wakeupresource.jet
src/: awaken.c  cJSON.c  iat.c  main.c  myhttp.c  myjson.c  myurl.c  myxml.c  play_audio.c  speech_recognizer.c  timer.c  tts.c
